# osm-world

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT-REMEDIATION.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  ideas.md
.claude/: statusline-f299288b-6760-484b-b253-e1aefaf8014f.local.json
.github/workflows/: ci.yml
.pi/: status-footer.json
crates/par-osm-rust/: CHANGELOG.md  Cargo.toml  README.md
crates/par-osm-rust/src/: cache.rs  elevation.rs  filter.rs  lib.rs  osm.rs  osm_cache.rs  overpass.rs  overture.rs  sources.rs  srtm.rs
crates/par-osm-rust/tests/: osm_parse.rs
docs/: ARCHITECTURE.md  troubleshooting.md
docs/superpowers/: README.md
docs/superpowers/plans/: 2026-05-01-phase1-window-flycam-testbuilding.md  2026-05-02-phase3-streaming-lod.md  2026-05-02-shading-shadows-occlusion-minimap.md  2026-05-03-cascaded-shadow-lod.md  2026-05-03-osm-world-area-prepare-backend.md  2026-05-03-osm-world-web-picker.md  2026-05-03-par-osm-rust-consumer-migration.md  2026-05-03-par-osm-rust-shared-cache-foundation.md  2026-05-04-overpasses-tunnels.md  2026-05-04-poi-point-features.md  2026-05-04-point-features.md  2026-05-05-overture-poi-shared-source.md  2026-05-05-street-signs.md  2026-05-06-sun-depth.md  2026-05-06-visual-detail-controls.md
docs/superpowers/specs/: 2026-05-01-osm-world-3d-engine-design.md  2026-05-02-phase3-streaming-lod-design.md  2026-05-02-shading-shadows-occlusion-minimap-design.md  2026-05-03-cascaded-shadow-lod-design.md  2026-05-03-shared-osm-cache-and-streaming-design.md  2026-05-04-overpasses-tunnels-design.md  2026-05-04-point-features-design.md  2026-05-05-overture-poi-shared-source-design.md  2026-05-05-street-signs-design.md  2026-05-06-osm-world-visual-detail-controls-design.md  2026-05-06-sun-depth-design.md
scripts/: run-app.sh
shaders/: city.wgsl  contact_shadow.wgsl  features.wgsl  scene_uniforms.wgsl  shadow.wgsl  sky.wgsl  sky_helpers.wgsl
src/: atmosphere.rs  lib.rs  main.rs  mesh.rs  server.rs  visual_detail.rs
src/app/: event_handler.rs  init.rs  mod.rs  prefs.rs  render_loop.rs  update.rs
src/camera/: controller.rs  mod.rs
src/geo/: coords.rs  elevation.rs  mod.rs  srtm.rs
src/osm/: mod.rs  parse.rs
src/render/: bind_groups.rs  buffers.rs  contact_shadow.rs  frustum.rs  minimap.rs  mod.rs  occlusion.rs  pipelines.rs  shadow_bind_group.rs  shadow_pipeline.rs  sky_pipeline.rs  vertex.rs
src/server/: mod.rs  prepared_cache.rs  routes.rs  shell.rs  tests.rs  types.rs  validate.rs
src/stream/: lod.rs  mod.rs  tile.rs
src/ui/: hud.rs  inspect.rs  minimap.rs  mod.rs  poi_labels.rs  search.rs  settings.rs
src/world/: address.rs  building.rs  color.rs  landuse.rs  loader.rs  mod.rs  point_feature.rs  railway.rs  road.rs  street_sign.rs  terrain.rs  transit.rs  water.rs
src/world/loader/: geometry.rs  mesh.rs  mod.rs  source.rs  tests.rs  vegetation.rs
src/world/loader/mesh/: mod.rs  roads.rs  terrain_cuts.rs  water.rs
src/world/point_feature/: geometry.rs  landmark.rs  mod.rs  nature.rs  poi.rs  style.rs  tests.rs  transit.rs  tree.rs
src/world/road/: bridge.rs  cap.rs  centerline.rs  geometry.rs  mod.rs  profile.rs  render_path.rs  ribbon.rs  tests.rs  tunnel.rs
tests/: camera_test.rs  shader_source_test.rs
web/: .gitignore  eslint.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: Dialog.tsx  HelpOverlay.tsx  MapPicker.tsx  PreparedHistorySection.tsx  PreparedOutputSection.tsx
web/src/lib/: api.test.ts  api.ts  bboxPresets.test.ts  bboxPresets.ts  commandVariants.test.ts  commandVariants.ts  errorHints.test.ts  errorHints.ts  settingsProfiles.test.ts  settingsProfiles.ts
