[package]
name = "osm-world"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "3D city renderer using OpenStreetMap data and WGPU"
authors = ["Paul Robello <probello@gmail.com>"]
license = "MIT"

[features]
# Compiles the dev/test fallback scene (a single textured box on a ground
# plane) so `osm-world` can be launched without `--input`. Off by default so
# the test-scene geometry does not ship in release binaries; `cargo test`
# still gets it via `#[cfg(test)]`. Enable explicitly for local dev runs
# without source data: `cargo run --features dev_scene`.
default = []
dev_scene = []

[workspace]
resolver = "2"

[workspace.dependencies]
# Shared pin version anchors. ARC-009 originally introduced these to keep the
# vendored `par-osm-rust` workspace member and `osm-world` from drifting on
# different patch versions of the same crate. `par-osm-rust` is now consumed
# from crates.io (ARC-003), so these are no longer co-versioned with another
# workspace manifest — but the centralized pinning is still useful as a single
# override point for `cargo update`.
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
flate2 = "1.1"
log = "0.4"
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27.0"
urlencoding = "2.1"

[workspace.lints.clippy]
# Codify the project's standing `cargo clippy -- -D warnings` gate so the
# standard lint set is enforced even when the user runs a plain `cargo clippy`.
# `all = "deny"` denies the default warn-level lints (the same set that
# `-D warnings` would promote). Pedantic/nursery groups are intentionally left
# unset so existing well-considered patterns are not newly flagged.
all = { level = "deny", priority = -1 }

[lints]
workspace = true

[dependencies]
par-osm-rust = "0.5.0"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors"] }
wgpu = "29.0.3"
winit = "0.30.13"
glam = "0.32.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
pollster = "0.4"
anyhow.workspace = true
log.workspace = true
env_logger = "0.11"
clap = { version = "4", features = ["derive"] }
chrono = { workspace = true }
image = "0.25"
earcutr = "0.5"
flate2.workspace = true
reqwest.workspace = true
urlencoding.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle = "2"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = "0.34"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
naga = { version = "29.0.3", features = ["wgsl-in"] }
tempfile.workspace = true
