[package]
name = "par-osm-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Shared OpenStreetMap and SRTM fetch, parse, and cache utilities"
authors = ["Paul Robello <probello@gmail.com>"]
license = "MIT"
repository = "https://github.com/paulrobello/par-osm-rust"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1.1"
log = "0.4"
memmap2 = "0.9"
osmpbf = "0.3.8"
quick-xml = "0.39.4"
reqwest = { version = "0.13", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tempfile = "3.27.0"
url = "2"
urlencoding = "2.1"
