[package]
name = "par-osm-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Shared OpenStreetMap and SRTM fetch, parse, and cache utilities"
authors = ["Paul Robello <probello@gmail.com>"]
license = "MIT"
repository = "https://github.com/paulrobello/par-osm-rust"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flate2.workspace = true
log.workspace = true
memmap2.workspace = true
osmpbf.workspace = true
quick-xml.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
url = "2"
urlencoding.workspace = true

[lints]
workspace = true
